misc: 更改工程名

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nekui",
+  "name": "zhenyu_panda_nekui",
   "description": "UI components based on RegularJS",
   "version": "0.6.1",
   "main": "./dist/js/nek-ui.js",
